fix: adjust spacing

--- a/src/index.css
+++ b/src/index.css
@@ -5,4 +5,6 @@ body, html, #root {
   height: 100%;
   overflow: hidden;
   background-color: #050505;
+  font-style: normal;
+  font-family: "Roboto", sans-serif;
 }
